[package]
name = "maph"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Maths package for use with personal stuff, but like, you can totally use it! If you want! There's even some light documentation now!"
repository = "https://github.com/delphine-birch/maph"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = [ "derive" ] }
bimap = "0.6.2"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "rationals"
harness = false
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true